# MNF

./: .gitignore  MANUAL.md  README.md  constants.py  helper.py  main.py  pyproject.toml
data/: must-haves.json  must-haves.json.bak
scripts/: constants.py  helper.py  main.py
