[project]
name = "modrinthapitest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "fuzzywuzzy>=0.18.0",
    "idna==3.11",
    "python-levenshtein>=0.27.3",
    "requests==2.32.5",
    "termcolor==3.2.0",
    "urllib3==2.5.0",
]
